--- a/Push Text/manifest.json
+++ b/Push Text/manifest.json
@@ -6,7 +6,9 @@
   "version": "1.0",
   "content_security_policy": "script-src 'self' https://*.firebaseio.com; object-src 'self'",
 
-
+  "icons": {
+    "128": "icon.png"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -16,7 +18,7 @@
   ],
   "background": {
     "persistent": true,
-    "scripts": ["firebase.js","background.js"]
+    "scripts": ["lib/firebase.js","background.js"]
   },
   "browser_action": {
     "default_icon": "icon.png",
