--- a/Push Text/manifest.json
+++ b/Push Text/manifest.json
@@ -18,7 +18,11 @@
   ],
   "background": {
     "persistent": true,
-    "scripts": ["lib/firebase.js","background.js"]
+    "scripts": [
+      "lib/socket.io.slim.js",
+      "lib/room.js",
+      "background.js"
+    ]
   },
   "browser_action": {
     "default_icon": "icon.png",
