--- a/Push Text/manifest.json
+++ b/Push Text/manifest.json
@@ -3,8 +3,8 @@
 
   "name": "Push Text",
   "description": "This extension push selected text to other devices",
-  "version": "1.0.1",
-  "content_security_policy": "script-src 'self' https://*.firebaseio.com; object-src 'self'",
+  "version": "1.1",
+  "content_security_policy": "script-src 'self' object-src 'self'",
 
   "icons": {
     "128": "icon.png"
@@ -31,7 +31,6 @@
   "permissions": [
     "tabs",
     "storage",
-    "<all_urls>",
-    "https://ajax.googleapis.com/"
+    "<all_urls>"
   ]
 }
